--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "firebase/php-jwt": "^6.10",
+        "google/apiclient": "^2.18",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "tymon/jwt-auth": "^2.1"
+        "paz/laravel-elasticsearch": "@dev",
+        "tymon/jwt-auth": "^2.1",
+        "vladimir-yuldashev/laravel-queue-rabbitmq": "^14.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -66,6 +70,15 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "stable",
-    "prefer-stable": true
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "repositories": [
+        {
+            "type": "path",
+            "url": "packages/laravel-elasticsearch",
+            "options": {
+                "symlink": true
+            }
+        }
+    ]
 }
